feat: complete pagination in frontend for all main modules
